Improves Timesheet page with touch-friendly buttons. Fixes AmberBit name at login page. Fixes some overflowing text in Timesheet table. Adds some titles to notice users about external links, and other web accesibility details.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,9 +15,6 @@
 
 @import "foundation/foundation-global", "foundation/components/global", "foundation/components/buttons";
 
-
-
-
 .page-header {
   h1 {
     margin-bottom: 0;
@@ -27,6 +24,11 @@
 
 .table {
   text-align: left;
+}
+
+.table tr td {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .tinyicon {
